--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather App</title>
-    <script type="text/javascript" src="jquery-1.9.1.min.js"></script>
-     <script type="text/javascript" src="jquery.autocomplete.min.js"></script>
-    <script type="text/javascript" src="currency-autocomplete.js"></script>
+    <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+     <script type="text/javascript" src="js/jquery.autocomplete.min.js"></script>
+    <script type="text/javascript" src="js/currency-autocomplete.js"></script>
    
     <link rel="stylesheet" href="style.css">
 </head>
@@ -28,8 +28,8 @@
 
     </div>
 </div>
-<script src="init.js"></script>
-<script src="weather-data.js"></script>
-<script src="app.js"></script>
+<script src="js/init.js"></script>
+<script src="js/weather-data.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
